data/derived/comb/progs/unify/prog1484.ml.out
Characters 81-82:
  (0,0)::a
         ^
Error: This expression has type 'a list * 'b
       but an expression was expected of type (int * int) list
